style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap');

html, body {
    overflow-x: hidden;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

body {
    background-color: #DDE1E7;
}

ul {
    list-style: none;
}

hr {
    border: none;
    height: 2px;
    background: linear-gradient(to right, #B0B5BF, #8A8F99, #B0B5BF);
    border-radius: 3px;
}

#features, #recent {
    min-height: 600px;
}

/* NAV */
.nav {
    width: 100%;
    height: 64px;
    display: flex;
    background-color: #BFC5D2;
}

.nav__container {
    width: 100%;
    max-width: 1200px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 auto;
    padding: 0 24px;
}

.nav__logo {
    width: 160px;
}

.nav__links {
    display: flex;
}

.nav__link {
    margin-left: 16px;
    text-decoration: none;
    font-size: 20px;
    font-weight: bold;
    color: #222831;
    padding: 4px 12px;
    transition: color 300ms ease-in-out;
}

.nav__link:hover {
    color: #3969C6;
}

.nav__link--primary {
    border: 2px solid;
    border-radius: 24px;
    background-color: #E4E6EB;
}

/* SECTIONS */
.section:nth-of-type(even) {
    background-color: #E8EAF0;
}

.section:nth-of-type(odd) {
    background-color: #DCE0E6;
}

.section__title {
    padding-top: 32px;
}

/* HEADERS */

.header {
    position: relative;
    z-index: 2;
}

.header__container {
    width: 100%;
    max-width: 720px;
    text-align: center;
    margin: 0 auto;
    padding: 68px 0;
    z-index: 3;
}

.header__img--wrapper img {
    max-width: 100%;
    height: auto;
}

.text--primary {
    color: #3969C6;
}

h1 {
    font-size: 56px;
    text-align: center;
    margin-bottom: 24px;
}

h2 {
    font-size: 32px;
    margin-bottom: 32px;
    text-align: center;
}

/* BUTTON */

.btn {
    background-color: #3A86FF;
    color: #DDE1E7;
    padding: 12px 24px;
    font-size: 20px;
    font-weight: 700;
    border-radius: 4px;
    border: none;
    cursor: pointer;
    transition: background-color 300ms ease-in-out;
}

.btn:hover {
    background-color: #0041c4;
}

button:active {
    transform: translateY(1px);
}

/* HIGHLIGHTS */

#highlights {
    position: relative;
    z-index: 1;
    min-height: 400px;
}

#highlights:before {
    background: url('assets/wave.svg');
    content: "";
    position: absolute;
    z-index: 1;
    width: 100vw;
    height: 12vw;
    top: 1px;
    left: 0;
    z-index: -1;
    background-size: cover;
    background-repeat: no-repeat;
    transform: translateY(-100%);
    filter: invert(40%) sepia(10%) saturate(150%) hue-rotate(180deg) brightness(144%);
}

#highlights:after {
    background: url('assets/wave.svg');
    content: "";
    position: absolute;
    z-index: 1;
    width: 100vw;
    height: 12vw;
    bottom: 1px;
    left: 0;
    z-index: -1;
    background-size: cover;
    background-repeat: no-repeat;
    transform: translateY(100%) rotate(180deg);
    filter: invert(40%) sepia(10%) saturate(150%) hue-rotate(180deg) brightness(144%);
}

.highlight__wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 100%;
    height: auto;
    margin: 0 auto;
    gap: 32px;
}

.highlight {
    flex: 1 1 280px;
    max-width: 300px;
    min-height: 250px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 24px;
    border: solid 2px #3969C6;
    border-radius: 12px;
}

.highlight__icon {
    font-size: 64px;
    color: #3969C6;
    margin-bottom: 20px;
}

.highlight__subtitle {
    font-size: 24px;
    font-weight: bold;
    margin-bottom: 12px;
}

.highlight__para {
    padding-top: 4px;
    text-align: center;
    max-width: 200px;
    flex-grow: 1;
}

/* FEATURES */

#features {
    padding: 8vw;
}

.books {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    gap: 24px;
    max-width: 1200px;
    margin: 0 auto;
}

.book {
    width: calc(25% - 12px);
    padding: 24px;
    display: flex;
    flex-direction: column;
    align-items: center;
    min-width: 200px;
    max-width: 280px;
    flex-grow: 1;
}

.book__img {
    max-height: 320px;
    transition: all 300ms ease;
    cursor: no-drop;
    width: auto;
    max-width: 100%;
    display: flex;
    justify-content: center;
}

.book__img--wrapper {
    margin-bottom: 8px;
    border-radius: 4px;
    overflow: hidden;
    display: flex;
    align-items: center;
}

.book:hover .book__img {
    transform: scale(1.03);
}

.book__title {
    font-size: 18px;
    margin-bottom: 8px;
    text-align: center;
}

.book__title:hover {
    text-decoration: underline;
    cursor: not-allowed;
}

.book__ratings {
    margin-bottom: 8px;
    text-align: center;
}

.book__price {
    text-align: center;
}

.book__price--normal {
    text-decoration: line-through;
    padding-right: 6px;
    color: #bfbfbf;
    text-align: center;
}

/* CONTAINERS */

.container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 16px;
}

.row {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

